--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -330,7 +330,7 @@ if(developer)
 endif()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-register")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 include(BareosSetVariableDefaults)
 
