python2: add -Wnoregister to Python2_CC_FLAGS

--- a/core/src/plugins/dird/python/CMakeLists.txt
+++ b/core/src/plugins/dird/python/CMakeLists.txt
@@ -27,6 +27,7 @@ if(Python2_FOUND)
   target_link_libraries(python-dir ${Python2_LIBRARIES} bareos)
   target_include_directories(python-dir PUBLIC SYSTEM ${Python2_INCLUDE_DIRS})
   target_compile_definitions(python-dir PUBLIC PY2MODDIR=\"${Python2_SITELIB}\")
+  target_compile_options(python-dir PUBLIC ${Python2_CCSHARED})
   add_dependencies(python-dir bareosdir-python2-module)
 
   set(PYFILES pyfiles/bareos-dir-class-plugin.py
